<?xml version="1.0"?>
<package format="2">
  <name>target_kf</name>
  <version>0.0.0</version>
  <description>The target_kf package</description>

  <maintainer email="chaiigelh@gmail.com">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>object_detection_msgs</depend>
  <depend>predict_trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>mapping</depend>
  
</package>